--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,8 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.*
 
 npm-debug.log*
 yarn-debug.log*
@@ -25,3 +23,4 @@ dist
 /public/lib
 .eslintcache
 src/config/dev.ts
+.yarn
